--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/BrusJan/JBusiness#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.6.9",
+    "mongodb": "^3.3.0-beta2",
+    "nodemon": "^1.19.1",
     "pug": "^2.0.4"
   }
 }
