--- a/client/angular.json
+++ b/client/angular.json
@@ -28,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@coreui/coreui/dist/css/coreui.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -94,7 +94,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "node_modules/@coreui/coreui/dist/css/coreui.min.css",
+              "src/styles.scss"
             ],
             "scripts": []
           }
