--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
-    "bootstrap": "^4.3.1",
+    "@coreui/angular": "^2.5.3",
+    "@coreui/coreui": "^2.1.12",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "sb-admin-2": "^3.3.8",
