--- a/client/angular.json
+++ b/client/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "node_modules/@coreui/coreui/dist/css/coreui.min.css",
+              "node_modules/simple-line-icons/css/simple-line-icons.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -95,6 +96,7 @@
             ],
             "styles": [
               "node_modules/@coreui/coreui/dist/css/coreui.min.css",
+              "node_modules/simple-line-icons/css/simple-line-icons.css",
               "src/styles.scss"
             ],
             "scripts": []
