--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@coreui/coreui": "^2.1.12",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ng-recaptcha": "^8.0.0",
     "ngx-perfect-scrollbar": "^8.0.0",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
